# cleaning_sw

./: CMakeLists.txt  Environment.h  doc.h  environment.h  file.h  image.h  main.cpp  music.h  no_extension.h  other.h  package.h  pdf.h  torrent.h  txt.h  type.h  types.h  video.h
